--- a/app/src/main/res/layout/translator_frag.xml
+++ b/app/src/main/res/layout/translator_frag.xml
@@ -1,6 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/bg">
+
+    <TextView
+        android:id="@+id/empty_view_not_connected"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:padding="32dp"
+        android:text="No Internet Connection Available"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textSize="24sp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.12"
+        android:layout_marginTop="200px"
+        android:orientation="horizontal">
+
+        <Spinner
+            android:id="@+id/spinner_language_from"
+            style="@style/Widget.AppCompat.Spinner.DropDown"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="0.5"
+            android:background="@drawable/button_shape"
+            android:spinnerMode="dropdown"
+            android:textAlignment="center" />
+        <ImageView
+            android:id="@+id/image_swap"
+            android:layout_width="0dp"
+            android:layout_weight="0.2"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_swap_horiz_black_24dp"
+            android:tint="#fff" />
+        <Spinner
+            android:id="@+id/spinner_language_to"
+            android:spinnerMode="dropdown"
+            android:textAlignment="center"
+            android:layout_width="0dp"
+            android:layout_marginRight="10dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:background="@drawable/button_shape"/>
+
+    </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.5">
+        <EditText
+            android:id="@+id/text_input"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"
+            android:gravity="top"
+            android:padding="16dp"
+            android:paddingBottom="30dp"
+            android:textSize="30sp"
+            android:hint="Tap to enter text...."
+            android:textColor="#FDfd88"
+            android:textColorHint="#fff"/>
+
+        <ImageView
+            android:id="@+id/clear_text"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/ic_clear_black_24dp"
+            android:tint="@android:color/white"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_margin="8dp"/>
+
+
+    </RelativeLayout>
+    <Button
+        android:id="@+id/button_translate"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.12"
+        android:layout_marginRight="50dp"
+        android:layout_marginLeft="50dp"
+        android:gravity="center"
+        android:text="Translate"
+
+        android:textSize="30sp"
+        android:textColor="#fff"
+        android:background="@drawable/button_shape"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.5">
+        <TextView
+            android:id="@+id/text_translated"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"
+            android:gravity="top"
+            android:padding="16dp"
+            android:paddingBottom="30dp"
+            android:scrollbars="vertical"
+            android:textColor="#FDfd88"
+            android:textSize="30sp" />
+
+    </RelativeLayout>
 
 </LinearLayout>
