--- a/app/src/main/res/layout/note_view_layout.xml
+++ b/app/src/main/res/layout/note_view_layout.xml
@@ -23,6 +23,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -80,7 +81,7 @@
                         android:padding="2dp"
                         android:text="TextView"
                         android:textAlignment="viewStart"
-                        android:textColor="@color/colorPrimaryDark"
+                        android:textColor="@color/bright_color"
                         android:textSize="14sp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
