--- a/app/src/main/res/layout/dictionary_frag.xml
+++ b/app/src/main/res/layout/dictionary_frag.xml
@@ -6,27 +6,45 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="320dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="16dp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:text="WELCOME TO DICTIONARY"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.508"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></TextView>
+
     <EditText
-        android:ems="10"
-        android:background="@null"
         android:id="@+id/enterWord"
-        android:layout_width="323dp"
-        android:layout_height="120dp"
+        android:layout_width="320dp"
+        android:layout_height="90dp"
+        android:background="@color/light_color"
+        android:ems="10"
         android:hint="Write Word here. . ."
-        android:textColor="#FDfd88"
-        android:textColorHint="#fff"
+        android:paddingLeft="25dp"
+        android:textColor="#13547a"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.107" />
+        app:layout_constraintVertical_bias="0.156" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="200dp"
         android:layout_height="76dp"
         android:background="@drawable/button_shape"
+
         android:onClick="sendRequestOnClick"
         android:text="Find"
         android:textColor="#FFFFFF"
@@ -36,15 +54,17 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.389" />
+        app:layout_constraintVertical_bias="0.381" />
 
     <TextView
         android:id="@+id/showDef"
-        android:layout_width="323dp"
-        android:layout_height="137dp"
+        android:background="@color/light_color"
+        android:paddingLeft="25dp"
+        android:paddingTop="20dp"
+        android:layout_width="320dp"
+        android:layout_height="150dp"
         android:hint="Meaning. . . "
-        android:textColor="#FDfd88"
-        android:textColorHint="#fff"
+        android:textColor="#13547a"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
