Setting of Ebook Page & Navigation Drawer

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,6 @@
     tools:context=".MainActivity">
 
 
-
     <androidx.drawerlayout.widget.DrawerLayout
         android:layout_width="match_parent"
         tools:openDrawer="end"
@@ -27,11 +26,17 @@
                 android:id="@+id/toolBar"
                 android:background="@color/bright_color"/>
 
-            <FrameLayout
+            <RelativeLayout
                 android:id="@+id/fragment_container"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent" >
 
+            <include layout="@layout/main_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/container" />
+
+            </RelativeLayout>
 
         </LinearLayout>
 
@@ -47,37 +52,8 @@
 
     </androidx.drawerlayout.widget.DrawerLayout>
 
-    <RelativeLayout
-        android:layout_marginTop="60dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/book_list_holder"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentTop="true"
-            android:layout_margin="8dp"
-            android:orientation="vertical"
-            android:scrollbars="vertical"/>
 
-        <TextView
-            android:id="@+id/progress_text"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentBottom="true"
-            android:background="#55888888"
-            android:gravity="center"
-            android:shadowColor="@android:color/white"
-            android:shadowDx="5"
-            android:shadowDy="5"
-            android:shadowRadius="5"
-            android:textColor="@android:color/black"
-            android:textSize="24sp"
-            android:visibility="gone" />
-
-    </RelativeLayout>
 
 
 
