--- a/app/src/main/res/layout/book_list_item.xml
+++ b/app/src/main/res/layout/book_list_item.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp"
-    android:layout_marginEnd="4dp"
     android:layout_marginStart="8dp"
     android:layout_marginTop="4dp"
-    android:background="#ffeeeeee"
+    android:layout_marginEnd="4dp"
+    android:layout_marginBottom="8dp"
+    android:orientation="vertical"
     android:paddingStart="6dp"
     android:paddingEnd="6dp">
 
