--- a/app/src/main/res/layout/content_add_note.xml
+++ b/app/src/main/res/layout/content_add_note.xml
@@ -16,13 +16,13 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="@android:color/transparent"
         android:ems="10"
         android:gravity="start|top"
-        android:textColorHint="#FFFFFF"
         android:hint="Write your note here!"
         android:inputType="textMultiLine"
         android:textColor="#FDFD77"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
